[tool.poetry]
name = "django-hedera"
version = "0.1.0"
description = "Bootcap Blockchain training"
authors = ["UJ Blockchain"]
license = "MIT"
readme = "README.rst"

[tool.isor]
multi_line_output = 5
line_length = 119

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.11"
align_closing_bracket_with_vitsual_indent =true
coalesce_brackets = true 
column_limit = 119
dedent_closing_brackets = true

[tool.poetry.dependendies]
python = "^3.11"
djano = "4.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
